Convert `io.quarkus.grpc.codegen.GrpcCodeGen` to new process API